BE - Modify email Template for send email verification code to avoid email marked as fishing